--- a/integrations/threejs/threejs.html
+++ b/integrations/threejs/threejs.html
@@ -49,7 +49,7 @@
         vec4 col = texture2D(u_texture, v_uv);
         //float depth = texture(u_depth, v_uv).x;
 
-        gl_FragColor  = vec4(col.zyx, 0.5);
+        gl_FragColor  = vec4(col.zyx, 1.0);
         //gl_FragDepth = 0.0;//depth * 0.5 + 0.5;
       }
     </script>
@@ -80,7 +80,8 @@
       let colourTextureGL, udTextureDepth;
 
       camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 );
-      camera.position.z = 0;
+      camera.position.y = -1;
+	  camera.position.z = -3;
 
       scene = new THREE.Scene(); 
 
@@ -122,33 +123,36 @@
       function animate() {
         requestAnimationFrame(animate);
         controls.update();
-
-        udSDKJS_ResizeScene(window.innerWidth, window.innerHeight, 0, 0);
-
+		
         let width = window.innerWidth;
         let height = window.innerHeight;
 
+
         if (udSDKJSReady) {
-          var vm = camera.modelViewMatrix.elements;
-          udSDKJS_SetMatrix(
-            "view",
-            vm[0],
-            vm[1],
-            vm[2],
-            vm[3],
-            vm[4],
-            vm[5],
-            vm[6],
-            vm[7],
-            vm[8],
-            vm[9],
-            vm[10],
-            vm[11],
-            vm[12],
-            vm[13],
-            vm[14],
-            vm[15]
-          );
+		  
+		  udSDKJS_ResizeScene(width, height, 0, 0);
+
+
+          //var vm = camera.modelViewMatrix.elements;
+          //udSDKJS_SetMatrix(
+          //  "view",
+          //  vm[0],
+          //  vm[1],
+          //  vm[2],
+          //  vm[3],
+          //  vm[4],
+          //  vm[5],
+          //  vm[6],
+          //  vm[7],
+          //  vm[8],
+          //  vm[9],
+          //  vm[10],
+          //  vm[11],
+          //  vm[12],
+          //  vm[13],
+          //  vm[14],
+          //  vm[15]
+          //);
 
           var pm = camera.projectionMatrix.elements;
           udSDKJS_SetMatrix(
@@ -265,25 +269,26 @@
         var status = udSDKJS_CreateSharedFrom_udCloud("Esri ArcScene").then(
           function() {
             // LiDAR of Melbourne available as [Open Data](https://data.melbourne.vic.gov.au/City-Council/City-of-Melbourne-3D-Point-Cloud-2018/).
-            udSDKJS_LoadModel("https://models.euclideon.com/Melbourne_75mm.uds").then(
-              function(modelHandle) {
-                let ret = udSDKJS_RenderQueueAddModel(modelHandle, 0, 0);
-                if(ret < 0)
-                  console.log(udSDKJS_GetErrorString(ret));
-                else
-                  console.log("load succ slotID:" + ret);
-              }, function(code) {
-                console.log(udSDKJS_GetErrorString(code));
-              }
-            );
+            //udSDKJS_LoadModel("https://models.euclideon.com/Melbourne_75mm.uds").then(
+            //  function(modelHandle) {
+            //    let ret = udSDKJS_RenderQueueAddModel(modelHandle, 0, 0);
+            //    if(ret < 0)
+            //      console.log(udSDKJS_GetErrorString(ret));
+            //    else
+            //      console.log("load succ slotID:" + ret);
+            //  }, function(code) {
+            //    console.log(udSDKJS_GetErrorString(code));
+            //  }
+            //);
 
             //non-geolocated uds
             let apple_uds = "https://fa-data-aueast-01.udcloud.euclideon.com/api/YZukILKU40uvb4qWI2SVg/_sharecode/TvCH2FoUKUSoZS5QgLr0Lg/_file/zUiBwcuHUG1st8UXlmg/apple.uds";
-            let vancouver_uds = "https://models.euclideon.com/Vancouver_Colour.uds";
+            //let vancouver_uds = "https://models.euclideon.com/Vancouver_Colour.uds";
             // LiDAR of Vancouver available as [Open Data](https://opendata.vancouver.ca/pages/home/).
             udSDKJS_LoadModel(apple_uds).then(
               function(modelHandle) {
-                let ret = udSDKJS_RenderQueueAddModel(modelHandle, 0, 0);
+ 			  let m = [1,0,0,0, 0,1,0,0, 0,0,1,0, 0,0,0,1];
+                let ret = udSDKJS_RenderQueueAddModelWithMatrix(modelHandle, m);
                 if(ret < 0)
                   console.log(udSDKJS_GetErrorString(ret));
                 else
