--- a/integrations/threejs/threejs.html
+++ b/integrations/threejs/threejs.html
@@ -40,17 +40,17 @@
       in highp vec2 v_uv;
 
       uniform sampler2D u_texture;
-      //uniform sampler2D u_depth;
+      uniform sampler2D u_depth;
       
       //layout(location = 0) out highp vec4 out_var_SV_Target0;
 
       void main()
       {
         vec4 col = texture2D(u_texture, v_uv);
-        //float depth = texture(u_depth, v_uv).x;
+        float depth = texture2D(u_depth, v_uv).x;
 
-        gl_FragColor  = vec4(col.zyx, 1.0);
-        //gl_FragDepth = 0.0;//depth * 0.5 + 0.5;
+        gl_FragColor = vec4(col.zyx, 1.0);
+        gl_FragDepth = depth * 0.5 + 0.5;
       }
     </script>
   </head>
@@ -79,7 +79,7 @@
       let scene, mesh, renderer, stats;
       let colourTextureGL, udTextureDepth;
 
-      camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 );      
+      camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 );
       camera.up.set(0,0,1);
       camera.position.x = -0.1;	
       camera.position.y = -0.1;
@@ -101,11 +101,11 @@
       let material = new THREE.ShaderMaterial({
         uniforms: {
           u_texture: { type: "t", value: null },
-          //u_depth: { type: "t", value: null },
-
+          u_depth: { type: "t", value: null },
         },
         vertexShader: document.getElementById("shader-vs").textContent.trim(),
-        fragmentShader: document.getElementById("shader-fs").textContent.trim()
+        fragmentShader: document.getElementById("shader-fs").textContent.trim(),
+        depthWrite: true
       });
 
       let geometry = new THREE.BufferGeometry();
@@ -115,7 +115,17 @@
         new THREE.BufferAttribute(vertices, 3)
       );
       mesh = new THREE.Mesh(geometry, material);
+      mesh.position.set( 0, 0, 0 );
       scene.add(mesh);
+
+      ///// test
+      const boxGeometry = new THREE.BoxGeometry( 0.05,  0.05,  0.05 );
+      const texture = new THREE.TextureLoader().load( 'crate.gif' );
+      let boxObject = new THREE.Mesh( boxGeometry, new THREE.MeshBasicMaterial( { map: texture } ) );
+      boxObject.position.set( 0, 0, 0 );
+      scene.add( boxObject );
+      /////
+
       camera.lookAt(scene.position);
       animate();
 
@@ -184,25 +194,29 @@
             width,
             height
           );
+          colourTextureGL.type = THREE.UnsignedByteType;
           colourTextureGL.format = THREE.RGBAFormat;
           colourTextureGL.needsUpdate = true;
 
-          //var ptr = udSDKJS_GetDepthBuffer();
-          //var dataHeapF32 = new Float32Array(
-          //  HEAPF32.subarray(ptr >> 2, (ptr + width * height * 4) >> 2)
-          //);
+          var ptr = udSDKJS_GetDepthBuffer();
+          var dataHeapF32 = new Float32Array(
+            HEAPF32.subarray(ptr >> 2, (ptr + width * height * 4) >> 2)
+          );
 
-          //udTextureDepth = new THREE.DataArrayTexture(
-          //  dataHeapF32,
-          //  width,
-          //  height,
-          //  1
-          //);
-          //udTextureDepth.format = THREE.DepthFormat;
-          //udTextureDepth.needsUpdate = true;
+          udTextureDepth = new THREE.DepthTexture(
+            dataHeapF32,
+            width,
+            height,
+          );
+          udTextureDepth.type = THREE.FloatType;
+          udTextureDepth.format = THREE.DepthFormat;
+          udTextureDepth.needsUpdate = true;
 
           material.uniforms.u_texture.value = colourTextureGL;
-          //material.uniforms.u_depth.value = udTextureDepth;
+          material.uniforms.u_depth.value = udTextureDepth;
+
+          ///test
+          boxObject.rotation.z += 0.2;
   
           stats.update();
           renderer.render(scene, camera);
@@ -245,7 +259,9 @@
         var status = udSDKJS_CreateSharedFrom_udCloud("Esri ArcScene").then(
           function() {
             // LiDAR of Vancouver available as [Open Data](https://opendata.vancouver.ca/pages/home/).
-            udSDKJS_LoadModel("https://models.euclideon.com/Vancouver_Colour.uds").then(
+            //udSDKJS_LoadModel("https://models.euclideon.com/Vancouver_Colour.uds").then(
+              let apple_uds = "https://fa-data-aueast-01.udcloud.euclideon.com/api/YZukILKU40uvb4qWI2SVg/_sharecode/TvCH2FoUKUSoZS5QgLr0Lg/_file/zUiBwcuHUG1st8UXlmg/apple.uds";
+            udSDKJS_LoadModel(apple_uds).then(
               function(modelHandle) {
                 let m = [1,0,0,0, 0,1,0,0, 0,0,-1,0, 0,0,0,1];
                 let ret = udSDKJS_RenderQueueAddModelWithMatrix(modelHandle, m);
