--- a/integrations/threejs/threejs.html
+++ b/integrations/threejs/threejs.html
@@ -76,18 +76,18 @@
         document.body.appendChild(WebGL.getWebGL2ErrorMessage());
       }
 
+      THREE.Object3D.DEFAULT_UP.set(0, 0, 1);
+
       let scene, mesh, renderer, stats;
       let colourTextureGL, udTextureDepth;
 
       camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 );
-      camera.up.set(0,0,1);
-      camera.position.x = -0.1;	
-      camera.position.y = -0.1;
-      camera.position.z = -0.02;
+      camera.position.y = -1;
 
       scene = new THREE.Scene(); 
 
       renderer = new THREE.WebGLRenderer();
+      renderer.setPixelRatio( window.devicePixelRatio );
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
@@ -105,7 +105,6 @@
         },
         vertexShader: document.getElementById("shader-vs").textContent.trim(),
         fragmentShader: document.getElementById("shader-fs").textContent.trim(),
-        depthWrite: true
       });
 
       let geometry = new THREE.BufferGeometry();
@@ -119,9 +118,14 @@
       scene.add(mesh);
 
       ///// test
-      const boxGeometry = new THREE.BoxGeometry( 0.05,  0.05,  0.05 );
+      const boxGeometry = new THREE.BoxGeometry( 0.5,  0.5,  0.5 );
       const texture = new THREE.TextureLoader().load( 'crate.gif' );
-      let boxObject = new THREE.Mesh( boxGeometry, new THREE.MeshBasicMaterial( { map: texture } ) );
+      let boxMaterial = new THREE.MeshBasicMaterial( { 
+        map: texture,
+        depthTest: true,
+        depthWrite: true,
+       } );
+      let boxObject = new THREE.Mesh( boxGeometry,  boxMaterial);
       boxObject.position.set( 0, 0, 0 );
       scene.add( boxObject );
       /////
@@ -135,12 +139,8 @@
 		
         let width = window.innerWidth;
         let height = window.innerHeight;
-
-
         if (udSDKJSReady) {
-		  
-		  udSDKJS_ResizeScene(width, height, 0, 0);
-
+          udSDKJS_ResizeScene(width, height, 0, 0);
           var pm = camera.projectionMatrix.elements;
           udSDKJS_SetMatrix(
             "projection",
@@ -203,19 +203,22 @@
             HEAPF32.subarray(ptr >> 2, (ptr + width * height * 4) >> 2)
           );
 
-          udTextureDepth = new THREE.DepthTexture(
+          udTextureDepth = new THREE.DataTexture(
             dataHeapF32,
             width,
             height,
           );
           udTextureDepth.type = THREE.FloatType;
-          udTextureDepth.format = THREE.DepthFormat;
+          udTextureDepth.format = THREE.RedFormat;
           udTextureDepth.needsUpdate = true;
 
           material.uniforms.u_texture.value = colourTextureGL;
-          material.uniforms.u_depth.value = udTextureDepth;
+          material.uniforms.u_depth.value = udTextureDepth; // however all data are 1 in this array, not sure why
 
           ///test
+          const r = Date.now() * 0.0005;
+          boxObject.position.x = Math.cos( r );
+          boxObject.position.y = Math.sin( r );
           boxObject.rotation.z += 0.2;
   
           stats.update();
@@ -259,9 +262,7 @@
         var status = udSDKJS_CreateSharedFrom_udCloud("Esri ArcScene").then(
           function() {
             // LiDAR of Vancouver available as [Open Data](https://opendata.vancouver.ca/pages/home/).
-            //udSDKJS_LoadModel("https://models.euclideon.com/Vancouver_Colour.uds").then(
-              let apple_uds = "https://fa-data-aueast-01.udcloud.euclideon.com/api/YZukILKU40uvb4qWI2SVg/_sharecode/TvCH2FoUKUSoZS5QgLr0Lg/_file/zUiBwcuHUG1st8UXlmg/apple.uds";
-            udSDKJS_LoadModel(apple_uds).then(
+            udSDKJS_LoadModel("https://models.euclideon.com/Vancouver_Colour.uds").then(
               function(modelHandle) {
                 let m = [1,0,0,0, 0,1,0,0, 0,0,-1,0, 0,0,0,1];
                 let ret = udSDKJS_RenderQueueAddModelWithMatrix(modelHandle, m);
