--- a/integrations/threejs/threejs.html
+++ b/integrations/threejs/threejs.html
@@ -62,7 +62,10 @@
       THREE.Object3D.DEFAULT_UP.set(0, 0, 1);
 
       let scene, mesh, renderer, stats;
-      let colourTextureGL, udTextureDepth;
+      var colourTextureGL, udTextureDepth;
+      var prevWidth = 0;
+      var prevHeight = 0;
+      var colourData, depthData;
 
       camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 1000 );
       camera.position.y = -1;
@@ -120,7 +123,8 @@
         let width = window.innerWidth;
         let height = window.innerHeight;
         if (udSDKJSReady) {
-          udSDKJS_ResizeScene(width, height, 0, 0);
+          if (width != prevWidth || height != prevHeight)
+            onResizeudSDK(width, height);
 
           var v = mesh.modelViewMatrix.elements;
           udSDKJS_SetMatrix("view", v[0],v[1],v[2],v[3],v[4],v[5],v[6],v[7],v[8],v[9],v[10],v[11],v[12],v[13],v[14],v[15]);
@@ -130,31 +134,11 @@
 
           udSDKJS_RenderQueue();
           var ptr = udSDKJS_GetColourBuffer();
-          var data = new Uint8Array(
-            HEAPU8.subarray(ptr, ptr + width * height * 4)
-          );
-
-          colourTextureGL = new THREE.DataTexture(
-            data,
-            width,
-            height
-          );
-          colourTextureGL.type = THREE.UnsignedByteType;
-          colourTextureGL.format = THREE.RGBAFormat;
+          colourData.set(HEAPU8.subarray(ptr, ptr + width * height * 4));
           colourTextureGL.needsUpdate = true;
 
           var ptr = udSDKJS_GetDepthBuffer();
-          var dataHeapF32 = new Float32Array(
-            HEAPF32.subarray(ptr >> 2, (ptr + width * height * 4) >> 2)
-          );
-
-          udTextureDepth = new THREE.DataTexture(
-            dataHeapF32,
-            width,
-            height,
-          );
-          udTextureDepth.type = THREE.FloatType;
-          udTextureDepth.format = THREE.RedFormat;
+          depthData.set(HEAPF32.subarray(ptr >> 2, (ptr + width * height * 4) >> 2));
           udTextureDepth.needsUpdate = true;
 
           material.uniforms.u_texture.value = colourTextureGL;
@@ -169,12 +153,35 @@
       }
 
       function onWindowResize() {
-        udSDKJS_ResizeScene(window.innerWidth, window.innerHeight, 0, 0);
-
         camera.aspect = window.innerWidth / window.innerHeight;
         camera.updateProjectionMatrix();
 
         renderer.setSize( window.innerWidth, window.innerHeight );
+      }
+
+      function onResizeudSDK(width, height)
+      {
+        if (udSDKJSReady)
+        {
+          prevWidth = width;
+          prevHeight = height;
+  
+          colourData = new Uint8Array(width * height * 4);
+          depthData = new Float32Array(width * height);
+  
+          colourTextureGL = new THREE.DataTexture(colourData, width, height);
+          colourTextureGL.type = THREE.UnsignedByteType;
+          colourTextureGL.format = THREE.RGBAFormat;
+          colourTextureGL.needsUpdate = true;
+  
+          udTextureDepth = new THREE.DataTexture(depthData, width, height);
+          udTextureDepth.type = THREE.FloatType;
+          udTextureDepth.format = THREE.RedFormat;
+          udTextureDepth.needsUpdate = true;
+
+          udSDKJS_ResizeScene(width, height, 0, 0);
+        }
+        
       }
     </script>
 
